--- a/papers/icra13/main.tex
+++ b/papers/icra13/main.tex
@@ -14,6 +14,7 @@
 \usepackage{sty/tkz-base}
 \usepackage[T1]{fontenc}
 \usepackage{cite}
+\usepackage[ruled,lined]{algorithm2e}
 
 \usetikzlibrary{shapes,decorations,shadows}
 \usetikzlibrary{decorations.pathmorphing}
