--- a/papers/icra13/bib/bibliography.bib
+++ b/papers/icra13/bib/bibliography.bib
@@ -286,6 +286,16 @@
   timestamp = {2011.01.04}
 }
 
+@BOOK{aster11parameter,
+  title = {Parameter Estimation and Inverse Problems},
+  publisher = {Academic Press},
+  year = {2011},
+  author = {Richard C. Aster and Brian Borchers and Clifford H. Thurber},
+  file = {aster11parameter.pdf:aster11parameter.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @INPROCEEDINGS{attamimi10learning,
   author = {Muhammad Attamimi and Akira Mizutani and Tomoaki Nakamura and Komei
 	Sugiura and Takayuki Nagai and Naoto Iwahashi and Hiroyuki Okada
@@ -367,8 +377,8 @@
 
 @ARTICLE{bailey06simultaneous,
   author = {Tim Bailey and Hugh Durrant-Whyte},
-  title = {Simultaneous Localization and Mapping: Part II},
-  journal = {IEEE Robotics and Automation Magazine},
+  title = {Simultaneous Localization and Mapping: Part {II}},
+  journal = {IEEE Robotics and Automation Magazine (RAM)},
   year = {2006},
   volume = {13},
   pages = {108-117},
@@ -1097,6 +1107,28 @@
   timestamp = {2012.02.14}
 }
 
+@INPROCEEDINGS{brookshire12extrinsic,
+  author = {Jonathan Brookshire and Seth Teller},
+  title = {Extrinsic Calibration from Per-Sensor Egomotion},
+  booktitle = {Proc. of the 8th Robotics: Science and Systems Conference (RSS)},
+  year = {2012},
+  file = {brookshire12extrinsic.pdf:brookshire12extrinsic.pdf:PDF},
+  owner = {jmaye},
+  pdf = {brookshire12extrinsic.pdf},
+  timestamp = {2012.09.13}
+}
+
+@INPROCEEDINGS{brookshire11automatic,
+  author = {Jonathan Brookshire and Seth Teller},
+  title = {Automatic Calibration of Multiple Coplanar Sensors},
+  booktitle = {Proc. of the 7th Robotics: Science and Systems Conference (RSS)},
+  year = {2011},
+  file = {brookshire11automatic.pdf:brookshire11automatic.pdf:PDF},
+  owner = {jmaye},
+  pdf = {brookshire11automatic.pdf},
+  timestamp = {2012.09.13}
+}
+
 @ARTICLE{brostow09semantic,
   author = {Gabriel J. Brostow and Julien Fauqueur and Roberto Cipolla},
   title = {Semantic object classes in video: A high-definition ground truth
@@ -1264,6 +1296,20 @@
   file = {cemgil05hybrid.pdf:cemgil05hybrid.pdf:PDF},
   owner = {jmaye},
   timestamp = {2011.01.28}
+}
+
+@ARTICLE{chan94lowrank,
+  author = {Tony F. Chan and Per Christian Hansen},
+  title = {Low-rank Revealing {QR} Factorizations},
+  journal = {Numerical Linear Algebra with Applications},
+  year = {1994},
+  volume = {1},
+  pages = {33-44},
+  number = {1},
+  file = {chan94lowrank.pdf:chan94lowrank.pdf:PDF},
+  owner = {jmaye},
+  pdf = {ETHZ/svn/jmaye/literature/chan94lowrank.pdf},
+  timestamp = {2012.09.13}
 }
 
 @INPROCEEDINGS{chang10human,
@@ -1858,6 +1904,20 @@
   timestamp = {2011.09.19}
 }
 
+@ARTICLE{davis11algorithm,
+  author = {Timothy A. Davis},
+  title = {Algorithm 915: {SuiteSparseQR}: Multifrontal multithreaded rank-revealing
+	sparse {QR} factorization},
+  journal = {ACM Transactions on Mathematical Software},
+  year = {2011},
+  volume = {38},
+  pages = {1-24},
+  number = {1},
+  file = {davis11algorithm.pdf:davis11algorithm.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @ARTICLE{davy10generative,
   author = {Manuel Davy and Jean-Yves Tourneret},
   title = {Generative Supervised Classification Using Dirichlet Process Priors},
@@ -2097,6 +2157,7 @@
   year = {2011},
   file = {doshi11infinite.pdf:doshi11infinite.pdf:PDF},
   owner = {jmaye},
+  pdf = {doshi11infinite.pdf},
   timestamp = {2011.11.14}
 }
 
@@ -2247,8 +2308,8 @@
 
 @ARTICLE{durrantwhyte06simultaneous,
   author = {Hugh Durrant-Whyte and Tim Bailey},
-  title = {Simultaneous Localization and Mapping: Part I},
-  journal = {IEEE Robotics and Automation Magazine},
+  title = {Simultaneous Localization and Mapping: Part {I}},
+  journal = {IEEE Robotics and Automation Magazine (RAM)},
   year = {2006},
   volume = {13},
   pages = {99-108},
@@ -2841,6 +2902,21 @@
   timestamp = {2010.08.06}
 }
 
+@ARTICLE{finsterle11truncated,
+  author = {Stefan Finsterle and Michael B. Kowalsky},
+  title = {A truncated {Levenberg-Marquardt} algorithm for the calibration of
+	highly parameterized nonlinear models},
+  journal = {Computers \& Geosciences},
+  year = {2011},
+  volume = {37},
+  pages = {731-738},
+  number = {6},
+  month = {June},
+  file = {finsterle11truncated.pdf:finsterle11truncated.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @ARTICLE{fischler80random,
   author = {Martin A. Fischler and Robert C. Bolles},
   title = {Random Sample Consensus: A Paradigm for Model Fitting with Applications
@@ -3332,6 +3408,16 @@
   timestamp = {2010.08.04}
 }
 
+@BOOK{golub96matrix,
+  title = {Matrix Computations},
+  publisher = {The Johns Hopkins University Press},
+  year = {1996},
+  author = {Gene H. Golub and Charles F. Van Loan},
+  file = {golub96matrix.pdf:golub96matrix.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @ARTICLE{gosselin06feature,
   author = {Philippe H. Gosselin and Matthieu Cord},
   title = {Feature-based approach to semi-supervised similarity learning},
@@ -3568,6 +3654,18 @@
   timestamp = {2011.11.14}
 }
 
+@ARTICLE{hansen87truncated,
+  author = {Per Christian Hansen},
+  title = {The truncated {SVD} as a method for regularization},
+  journal = {BIT},
+  year = {1987},
+  volume = {27},
+  pages = {534-553},
+  file = {hansen87truncated.pdf:hansen87truncated.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @INPROCEEDINGS{harris88combined,
   author = {Chris Harris and Mike Stephens},
   title = {A combined corner and edge detector},
@@ -3798,6 +3896,19 @@
   timestamp = {2010.05.28}
 }
 
+@ARTICLE{hong92rank,
+  author = {Y. P. Hong and C.-T. Pan},
+  title = {Rank-Revealing {QR} Factorizations and the Singular Value Decomposition},
+  journal = {Mathematics of Computation},
+  year = {1992},
+  volume = {58},
+  pages = {213-232},
+  number = {197},
+  file = {hong92rank.pdf:hong92rank.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @ARTICLE{hospedales11identifying,
   author = {Timothy M. Hospedales and Jian Li and Shaogang Gong and Tao Xiang},
   title = {Identifying Rare and Subtle Behaviors: A Weakly Supervised Joint
@@ -3997,6 +4108,19 @@
   timestamp = {2010.08.04}
 }
 
+@ARTICLE{jauffret07observability,
+  author = {Claude Jauffret},
+  title = {Observability and {Fisher} Information Matrix in Nonlinear Regression},
+  journal = {IEEE Transactions on Aerospace and Electronic Systems},
+  year = {2007},
+  volume = {43},
+  pages = {756-759},
+  number = {2},
+  file = {jauffret07observability.pdf:jauffret07observability.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @INPROCEEDINGS{ji10towards,
   author = {Rongrong Ji and Hongxun Yao and Xiaoshuai Sun and Bineng Zhong and
 	Wen Gao},
@@ -4161,17 +4285,6 @@
   timestamp = {2011.09.19}
 }
 
-@INPROCEEDINGS{maye12curb,
-  author = {Jerome Maye Ralf Kaestner and Roland Siegwart},
-  title = {Curb Detection for a Pedestrian Robot in Urban Environments},
-  booktitle = {Proc. of the IEEE International Conference on Robotics and Automation
-	(ICRA)},
-  year = {2012},
-  file = {maye12curb.pdf:maye12curb.pdf:PDF},
-  owner = {jmaye},
-  timestamp = {2012.02.13}
-}
-
 @INPROCEEDINGS{kaestner10bayesian,
   author = {Ralf Kaestner and Nikolas Engelhard and Rudolph Triebel and Roland
 	Siegwart},
@@ -4184,6 +4297,17 @@
   owner = {jmaye},
   pdf = {kaestner10bayesian.pdf},
   timestamp = {2010.11.26}
+}
+
+@INPROCEEDINGS{kaestner12generative,
+  author = {Ralf Kaestner and Jerome Maye and Yves Pilat and Roland Siegwart},
+  title = {Generative Object Detection and Tracking in 3D Range Data},
+  booktitle = {Proc. of The IEEE International Conference on Robotics and Automation
+	(ICRA)},
+  year = {2012},
+  file = {kaestner12generative.pdf:kaestner12generative.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.02.10}
 }
 
 @INPROCEEDINGS{kafer10recognition,
@@ -4377,6 +4501,20 @@
   file = {kiryati91probabilistic.pdf:kiryati91probabilistic.pdf:PDF},
   pdf = {kiryati91probabilistic.pdf},
   publisher = {Elsevier Ltd}
+}
+
+@ARTICLE{kitagawa01regularization,
+  author = {T. Kitagawa and S. Nakata and Y. Hosoda},
+  title = {Regularization using {QR} Factorization and the Estimation of the
+	Optimal Parameter},
+  journal = {BIT},
+  year = {2001},
+  volume = {41},
+  pages = {1049-1058},
+  number = {5},
+  file = {kitagawa01regularization.pdf:kitagawa01regularization.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
 }
 
 @INPROCEEDINGS{kjellstrom10tracking,
@@ -4701,7 +4839,8 @@
 	Reconstruction},
   journal = {International Journal of Computer Vision (IJCV)},
   year = {2011},
-  note = {Online First},
+  volume = {100},
+  pages = {122-133},
   file = {ladicky11joint.pdf:ladicky11joint.pdf:PDF},
   owner = {jmaye},
   timestamp = {2011.10.26}
@@ -5396,6 +5535,28 @@
   timestamp = {2012.02.15}
 }
 
+@BOOK{mackay05information,
+  title = {Information Theory, Inference, and Learning Algorithms},
+  publisher = {Cambridge University Press},
+  year = {2005},
+  author = {David J.C. MacKay},
+  file = {mackay05information.pdf:mackay05information.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
+@INPROCEEDINGS{maddern12lost,
+  author = {Will Maddern and Alastair Harrison and Paul Newman},
+  title = {Lost in Translation (and Rotation): Rapid Extrinsic Calibration for
+	{2D} and {3D} {LIDARs}},
+  booktitle = {Proc. of the IEEE International Conference on Robotics and Automation
+	(ICRA)},
+  year = {2012},
+  file = {maddern12lost.pdf:maddern12lost.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @INPROCEEDINGS{madsen05modeling,
   author = {Rasmus E. Madsen and David Kauchak and Charles Elkan},
   title = {Modeling Word Burstiness Using the Dirichlet Distribution},
@@ -5485,6 +5646,17 @@
   timestamp = {2010.08.06}
 }
 
+@INPROCEEDINGS{martinelli06automatic,
+  author = {Agostino Martinelli and Davide Scaramuzza and Roland Siegwart},
+  title = {Automatic Self-Calibration of a Vision System during Robot Motion},
+  booktitle = {Proc. of the IEEE International Conference on Robotics and Automation
+	(ICRA)},
+  year = {2006},
+  file = {martinelli06automatic.pdf:martinelli06automatic.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @INPROCEEDINGS{matei08building,
   author = {Matei, B.C. and Sawhney, H.S. and Samarasekera, S. and Kim, J. and
 	Kumar, R.},
@@ -5522,6 +5694,17 @@
   file = {maye10robust.pdf:maye10robust.pdf:PDF},
   owner = {jmaye},
   timestamp = {2010.08.17}
+}
+
+@INPROCEEDINGS{maye12curb,
+  author = {Jerome Maye and Ralf Kaestner and Roland Siegwart},
+  title = {Curb Detection for a Pedestrian Robot in Urban Environments},
+  booktitle = {Proc. of the IEEE International Conference on Robotics and Automation
+	(ICRA)},
+  year = {2012},
+  file = {maye12curb.pdf:maye12curb.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.02.13}
 }
 
 @INPROCEEDINGS{maye10inferring,
@@ -6165,6 +6348,7 @@
   pages = {3648–3659},
   file = {oliveira10semantic.pdf:oliveira10semantic.pdf:PDF},
   owner = {jmaye},
+  pdf = {oliveira10semantic.pdf},
   timestamp = {2011.01.04}
 }
 
@@ -6175,6 +6359,7 @@
   year = {2000},
   file = {oliver00graphical.pdf:oliver00graphical.pdf:PDF},
   owner = {jmaye},
+  pdf = {oliver00graphical.pdf},
   timestamp = {2011.01.28}
 }
 
@@ -6203,6 +6388,7 @@
   year = {2010},
   file = {oniga10polynomial.pdf:oniga10polynomial.pdf:PDF},
   owner = {jmaye},
+  pdf = {oniga10polynomial.pdf},
   timestamp = {2011.03.28}
 }
 
@@ -6216,6 +6402,7 @@
   number = {1-3},
   file = {orbanz08nonparametric.pdf:orbanz08nonparametric.pdf:PDF},
   owner = {jmaye},
+  pdf = {orbanz08nonparametric.pdf},
   timestamp = {2012.02.13}
 }
 
@@ -6227,6 +6414,7 @@
   year = {2010},
   file = {oreifej10human.pdf:oreifej10human.pdf:PDF},
   owner = {jmaye},
+  pdf = {oreifej10human.pdf},
   timestamp = {2010.08.04}
 }
 
@@ -6238,6 +6426,7 @@
   year = {1997},
   file = {osuna97training.pdf:osuna97training.pdf:PDF},
   owner = {jmaye},
+  pdf = {osuna97training.pdf},
   timestamp = {2011.10.17}
 }
 
@@ -6279,6 +6468,7 @@
   month = {June},
   file = {ozden10multibody.pdf:ozden10multibody.pdf:PDF},
   owner = {jmaye},
+  pdf = {ozden10multibody.pdf},
   timestamp = {2010.05.30}
 }
 
@@ -6291,6 +6481,7 @@
   year = {2011},
   file = {callaghan11learning.pdf:callaghan11learning.pdf:PDF},
   owner = {jmaye},
+  pdf = {callaghan11learning.pdf},
   timestamp = {2011.09.19}
 }
 
@@ -6304,6 +6495,7 @@
   number = {1-2},
   file = {page54continuous.pdf:page54continuous.pdf:PDF},
   owner = {jmaye},
+  pdf = {page54continuous.pdf},
   timestamp = {2011.01.28}
 }
 
@@ -6315,6 +6507,7 @@
   year = {2010},
   file = {paisley10stick.pdf:paisley10stick.pdf:PDF},
   owner = {jmaye},
+  pdf = {paisley10stick.pdf},
   timestamp = {2011.01.04}
 }
 
@@ -6329,6 +6522,7 @@
   pages = {177-192},
   file = {papadakis10panorama.pdf:papadakis10panorama.pdf:PDF},
   owner = {jmaye},
+  pdf = {papadakis10panorama.pdf},
   timestamp = {2010.05.30}
 }
 
@@ -6342,6 +6536,7 @@
   number = {1},
   file = {papageorgiou00trainable.pdf:papageorgiou00trainable.pdf:PDF},
   owner = {jmaye},
+  pdf = {papageorgiou00trainable.pdf},
   timestamp = {2011.10.17}
 }
 
@@ -6353,6 +6548,7 @@
   year = {1998},
   file = {papageorgiou98general.pdf:papageorgiou98general.pdf:PDF},
   owner = {jmaye},
+  pdf = {papageorgiou98general.pdf},
   timestamp = {2011.10.17}
 }
 
@@ -6364,6 +6560,7 @@
   year = {2010},
   file = {parikh10role.pdf:parikh10role.pdf:PDF},
   owner = {jmaye},
+  pdf = {parikh10role.pdf},
   timestamp = {2010.08.04}
 }
 
@@ -6724,17 +6921,6 @@
   owner = {jmaye},
   pdf = {rakhlin10online.pdf},
   timestamp = {2010.12.14}
-}
-
-@INPROCEEDINGS{kaestner12generative,
-  author = {Ralf Kaestner, Jerome Maye, Yves Pilat, and Roland Siegwart},
-  title = {Generative Object Detection and Tracking in 3D Range Data},
-  booktitle = {Proc. of The IEEE International Conference on Robotics and Automation
-	(ICRA)},
-  year = {2012},
-  file = {kaestner12generative.pdf:kaestner12generative.pdf:PDF},
-  owner = {jmaye},
-  timestamp = {2012.02.10}
 }
 
 @INPROCEEDINGS{ranganathan10pliss,
@@ -7322,9 +7508,23 @@
   timestamp = {2010.08.05}
 }
 
+@ARTICLE{sheehan12self,
+  author = {Mark Sheehan and Alastair Harrison and Paul Newman},
+  title = {Self-Calibration for a {3D} Laser},
+  journal = {The International Journal of Robotics Research (IJRR)},
+  year = {2012},
+  volume = {31},
+  pages = {675-687},
+  number = {5},
+  month = {April},
+  file = {sheehan12self.pdf:sheehan12self.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.13}
+}
+
 @INPROCEEDINGS{sheehan10automatic,
   author = {Mark Sheehan and Alastair Harrison and Paul Newman},
-  title = {Automatic Self-Calibration Of A Full Field-Of-View 3D n-Laser Scanner},
+  title = {Automatic Self-Calibration Of A Full Field-Of-View {3D} n-Laser Scanner},
   booktitle = {Proc. of the 12th International Symposium on Experimental Robotics
 	(ISER)},
   year = {2010},
