--- a/papers/icra13/src/introduction.tex
+++ b/papers/icra13/src/introduction.tex
@@ -1,3 +1,6 @@
-\cite{bishop06pattern}
-
-The remainder of the paper is structured as follows.
+The remainder of the paper is structured as follows. Section~\ref{sec:rel}
+will give a brief overview over related approaches. Section~\ref{sec:model} is
+dedicated to the mathematical grounding of our method.
+Section~\ref{sec:exp} demonstrates the validity of our approach through
+extensive experiments and evaluation. Section~\ref{sec:conc} will conclude the
+paper.
