--- a/papers/icra13/src/related.tex
+++ b/papers/icra13/src/related.tex
@@ -1,1 +1,9 @@
 The problem of ...
+
+List of papers to cite: \cite{davis11algorithm},
+\cite{brookshire12extrinsic}, \cite{aster11parameter}, \cite{brookshire11automatic},
+\cite{chan94lowrank}, \cite{finsterle11truncated}, \cite{golub96matrix},
+\cite{hansen87truncated}, \cite{hong92rank}, \cite{jauffret07observability},
+\cite{kitagawa01regularization}, \cite{levinson10unsupervised},
+\cite{mackay05information}, \cite{maddern12lost}, \cite{martinelli06automatic},
+\cite{sheehan12self}, \cite{sheehan10automatic}
