--- a/papers/icra13/bib/bibliography.bib
+++ b/papers/icra13/bib/bibliography.bib
@@ -3194,7 +3194,7 @@
 
 @INPROCEEDINGS{gao10online,
   author = {Chao Gao and John R. Spletzer},
-  title = {On-line Calibration of Multiple LIDARs on a Mobile Vehicle Platform},
+  title = {On-line Calibration of Multiple {LIDARs} on a Mobile Vehicle Platform},
   booktitle = {Proc. of The IEEE International Conference on Robotics and Automation
 	(ICRA)},
   year = {2010},
@@ -3882,7 +3882,7 @@
 }
 
 @ARTICLE{hol10modeling,
-  author = {Jeroen D. Hol and Thomas B. Schön and Fredrik Gustafsson},
+  author = {Jeroen D. Hol and Thomas B. Schoen and Fredrik Gustafsson},
   title = {Modeling and Calibration of Inertial and Vision Sensors},
   journal = {The International Journal of Robotics Research (IJRR)},
   year = {2010},
@@ -9337,7 +9337,6 @@
   booktitle = {Proc. of the IEEE/RSJ International Conference on Intelligent Robots
 	and Systems (IROS)},
   year = {2004},
-  volume = {3},
   file = {zhang04extrinsic.pdf:zhang04extrinsic.pdf:PDF},
   pdf = {zhang04extrinsic.pdf}
 }
