--- a/papers/icra13/src/related.tex
+++ b/papers/icra13/src/related.tex
@@ -6,4 +6,5 @@ List of papers to cite: \cite{davis11algorithm},
 \cite{hansen87truncated}, \cite{hong92rank}, \cite{jauffret07observability},
 \cite{kitagawa01regularization}, \cite{levinson10unsupervised},
 \cite{mackay05information}, \cite{maddern12lost}, \cite{martinelli06automatic},
-\cite{sheehan12self}, \cite{sheehan10automatic}
+\cite{sheehan12self}, \cite{sheehan10automatic}, \cite{zhang04extrinsic},
+\cite{gao10online}, \cite{hol10modeling}
