--- a/papers/icra13/src/related.tex
+++ b/papers/icra13/src/related.tex
@@ -1,4 +1,16 @@
-The problem of ...
+The problem of sensor calibration has been a recurring one in the history of
+robotics and computer vision. Thereby, it has been addressed using a
+variety of sensor setups and algorithms. A calibration process may involve
+recovering \emph{intrisic}, e.g. focal length for a camera, and \emph{extrinsic}
+parameters, i.e. the rigid transformation between the sensor's coordinate system
+and a reference coordinate system. For the former, one could devise a naive
+approach where the parameters are accurately determined during the manufacturing
+process. In the same vein, the transformation could be retrieved by means of
+some measuring instrument. However, the disadvantages of such purely
+engineered methods are manifolds. Apart from their impracticality, it can be
+nearly impossible to reach a satisfying accuracy and thus hinder the proper use
+of the sensor in a robotic system. Furthermore, external factors such as
+temperature variation or mechanical shocks may bias a factory calibration.
 
 List of papers to cite: \cite{davis11algorithm},
 \cite{brookshire12extrinsic}, \cite{aster11parameter}, \cite{brookshire11automatic},
